// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render block with schema 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-collapse-vertical"
        class="su-collapse-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.collapse_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="//0/text1"
                >
                  Text 1
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test 1"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="//0/text2"
                >
                  Text 2
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test 2"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="//1/text1"
                >
                  Text 1
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test 3"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="//1/text2"
                >
                  Text 2
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test 4"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render block with schema and error on fields already being modified 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-collapse-vertical"
        class="su-collapse-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.collapse_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="/block/0/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test1"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field error"
              >
                <label
                  class="label"
                  for="/block/1/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      class="minLength"
                      type="text"
                      value="T2"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                >
                  sulu_admin.error_minlength
                </div>
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="/block/2/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="T3"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render block with schema and error on fields already being modified 2`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-collapse-vertical"
        class="su-collapse-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.collapse_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field"
              >
                <label
                  class="label"
                  for="//0/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      type="text"
                      value="Test1"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                />
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field error"
              >
                <label
                  class="label"
                  for="//1/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      class="minLength"
                      type="text"
                      value="T2"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                >
                  sulu_admin.error_minlength
                </div>
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <button
              type="button"
            >
              <span
                aria-label="su-more-circle"
                class="su-more-circle"
              />
            </button>
            <button
              type="button"
            >
              <span
                aria-label="su-collapse-vertical"
                class="su-collapse-vertical"
              />
            </button>
          </div>
        </header>
        <article
          class="children"
        >
          <div
            class="grid grid"
          >
            <div
              class="item gridItem colSpan colSpan-12 space-before-0 space-after-0"
            >
              <div
                class="field error"
              >
                <label
                  class="label"
                  for="//2/text"
                >
                  Text
                </label>
                <div
                  class="fieldContainer"
                >
                  <div
                    class="field"
                  >
                    <input
                      class="minLength"
                      type="text"
                      value="T3"
                    />
                  </div>
                </div>
                <div
                  class="errorLabel"
                >
                  sulu_admin.error_minlength
                </div>
              </div>
            </div>
          </div>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render collapsed blocks with block previews 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.expand_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="icons"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </div>
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 1
          </p>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="icons"
          >
            <span
              aria-label="su-hide"
              class="su-hide"
            />
          </div>
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 4
          </p>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render collapsed blocks with block previews 2`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.expand_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 3
          </p>
          <p>
            Test 2
          </p>
          <p>
            Test 1
          </p>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 6
          </p>
          <p>
            Test 5
          </p>
          <p>
            Test 4
          </p>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render collapsed blocks with block previews and sections 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.expand_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 1
          </p>
          <p>
            Test 2
          </p>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            Test 3
          </p>
          <p>
            Test 4
          </p>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render collapsed blocks with block previews without tags 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.expand_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            media_selection
          </p>
          <p>
            text_line
          </p>
          <p>
            text_editor
          </p>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            media_selection
          </p>
          <p>
            text_line
          </p>
          <p>
            text_editor
          </p>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Render collapsed blocks with block previews without tags and with sections 1`] = `
<section
  class="blocks"
>
  <div
    class="blockCollectionActionButtonContainer"
  >
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-check"
        class="su-check blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.select_multiple_blocks
      </span>
    </button>
    <button
      class="blockCollectionActionButton"
      type="button"
    >
      <span
        aria-label="su-expand-vertical"
        class="su-expand-vertical blockCollectionActionButtonIcon"
      />
      <span
        class="blockCollectionActionButtonText"
      >
        sulu_admin.expand_all_blocks
      </span>
    </button>
  </div>
  <div
    class="spacer"
  />
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            media_selection
          </p>
          <p>
            text_line
          </p>
          <p>
            text_editor
          </p>
        </article>
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="type"
          >
            Default
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        >
          <p>
            media_selection
          </p>
          <p>
            text_line
          </p>
          <p>
            text_editor
          </p>
        </article>
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;
